[package]
name = "exacl"
version = "0.1.1"
authors = ["William W. Fisher <william.w.fisher@gmail.com>"]
description = "Manipulate file system access control lists (ACL) on macOS and Linux"
repository = "https://github.com/byllyfish/exacl"
documentation = "https://docs.rs/exacl"
license = "MIT"
edition = "2018"
keywords = ["acl", "access", "control"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Use bindgen to build OS-specific bindings.
buildtime_bindgen = ["bindgen"]

[dependencies]
bitflags = "1.2.1"
log = "0.4.11"
nix = "0.19.1"
num_enum = "0.5.1"
uuid = "0.8.1"
scopeguard = "1.1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
bindgen = { version = "0.56.0", optional = true }

[dev-dependencies]
tempfile = "3.1.0"
ctor = "0.1.16"

# Used by exacl.rs example.
env_logger = "0.8.2"
structopt = "0.3.20"
serde_json = "1.0.59"
