[package]
name = "exacl"
version = "0.6.0"
authors = ["Bill Fisher <william.w.fisher@gmail.com>"]
description = "Manipulate file system access control lists (ACL) on macOS, Linux, and FreeBSD"
repository = "https://github.com/byllyfish/exacl"
documentation = "https://byllyfish.github.io/exacl"
license = "MIT"
edition = "2018"
keywords = ["acl", "access", "control"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Use bindgen to build OS-specific bindings.
#
# On Linux, the bindings depend on the <sys/acl.h> system header. This header
# is only present on systems that have the `libacl1-dev` package installed.

buildtime_bindgen = ["bindgen"]

[dependencies]
bitflags = "1.2.1"
log = "0.4.11"
nix = "0.22.0"
num_enum = "0.5.1"
uuid = "0.8.1"
scopeguard = "1.1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
bindgen = { version = "0.59.1", optional = true }

[dev-dependencies]
tempfile = "3.1.0"
ctor = "0.1.16"

# Used by exacl.rs example.
clap = "2.33.3"
env_logger = "0.9.0"
structopt = "0.3.20"
serde_json = "1.0.59"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
