[package]
name = "exacl"
version = "0.10.0"
authors = ["Bill Fisher <william.w.fisher@gmail.com>"]
description = "Manipulate file system access control lists (ACL) on macOS, Linux, and FreeBSD"
repository = "https://github.com/byllyfish/exacl"
documentation = "https://byllyfish.github.io/exacl"
license = "MIT"
edition = "2021"
keywords = ["acl", "access", "control"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# There are two optional features that you can enable:
#  - serde
#  - buildtime_bindgen

default = []

# Use bindgen to build OS-specific bindings.
#
# On Linux, the bindings depend on the <sys/acl.h> system header. This header
# is only present on systems that have the `libacl1-dev` package installed.

buildtime_bindgen = ["bindgen"]

[dependencies]
bitflags = "2.1.0"
log = "0.4.11"
uuid = "1.1.1"
scopeguard = "1.1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[build-dependencies]
bindgen = { version = "0.64.0", optional = true }

[dev-dependencies]
tempfile = "3.1.0"
ctor = "0.1.16"

# Used by exacl.rs example.
clap = { version = "4.0.23", features = ["derive"] }
env_logger = "0.10.0"
serde_json = "1.0.59"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
